replace internal GuiIngredient code with RecipeSlot